TESTE 2: AbrirCard: modificacoes para atualizacao do BD "mover fase, excluir card, atualizar card, mandar para saude" e tambem para preenchimento dos campos necessarios
CRIAR CARD E CRIAR CARD CSS: modelagem do botao de criar

KAN2: atualizei os fetchs para GETs dos cards do BD de saude
KAN3 E KAN3 CSS: excluidos pois nao serao usados

--- a/src/pages/ElementosKanBans/CriarCard.module.css
+++ b/src/pages/ElementosKanBans/CriarCard.module.css
@@ -101,3 +101,16 @@
     justify-content: center;
     flex-wrap: wrap;
 }
+
+.criarCard form .criarCardButtonSub button {
+    height: 30px;
+    width: 140px;
+    border: 2px solid rgb(199, 130, 255); 
+    background-color: white;
+    transition: all 0.2s;
+}
+
+.criarCard form .criarCardButtonSub button:hover {
+    background-color: rgb(204, 141, 255);
+    color: white;
+}
