--- a/src/pages/ElementosKanBans/ColunaKanBan.module.css
+++ b/src/pages/ElementosKanBans/ColunaKanBan.module.css
@@ -8,7 +8,15 @@
     flex-shrink: 0;
 }
 
-.colKB p {
+#colK1 {
+    background-color: rgb(255, 199, 199);
+}
+
+#colK2 {
+    background-color: rgb(235, 213, 255)
+}
+
+.colKB .NomeCol {
     border: 1px solid rgb(163, 163, 163);
     box-shadow: 0px 2px 2px rgb(143, 143, 143);;
     height: 30px;
